# fast-h2m

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  python-bindings.yml  release.yml
crates/fast_h2m/: Cargo.toml  README.md  build.rs
crates/fast_h2m/benches/: convert.rs
crates/fast_h2m/examples/: basic.rs  table.rs  test_deser.rs  test_escape.rs  test_inline_formatting.rs  test_lists.rs  test_semantic_tags.rs  test_tables.rs  test_task_lists.rs  test_whitespace.rs
crates/fast_h2m/src/: convert_api.rs  exports.rs  inline_images.rs  lib.rs  mdream_adapter.rs  prelude.rs  rcdom.rs  simd_scan.rs  text.rs  tl_types.rs  validation.rs  visitor_helpers.rs
crates/fast_h2m/src/converter/: context.rs  dom_context.rs  fast_dom.rs  head_metadata.rs  main.rs  main_helpers.rs  metadata.rs  mod.rs  plain_text.rs  preprocessing_helpers.rs  prescan.rs  reference_collector.rs  text_node.rs  visitor_hooks.rs
crates/fast_h2m/src/converter/block/: blockquote.rs  container.rs  heading.rs  horizontal_rule.rs  line_break.rs  paragraph.rs  preformatted.rs  unknown.rs
crates/fast_h2m/src/converter/block/table/: builder.rs  cell.rs  cells.rs  mod.rs  scanner.rs  utils.rs
crates/fast_h2m/src/converter/form/: elements.rs
crates/fast_h2m/src/converter/handlers/: blockquote.rs  code_block.rs  graphic.rs  image.rs  link.rs
crates/fast_h2m/src/converter/inline/: code.rs  emphasis.rs  link.rs  mod.rs
crates/fast_h2m/src/converter/inline/semantic/: marks.rs  mod.rs  typography.rs
crates/fast_h2m/src/converter/list/: definition.rs  item.rs  ordered.rs  unordered.rs  utils.rs
crates/fast_h2m/src/converter/media/: embedded.rs  graphic.rs  image.rs  mod.rs  svg.rs
crates/fast_h2m/src/converter/semantic/: figure.rs  sectioning.rs  summary.rs
crates/fast_h2m/src/converter/tier1/: bail.rs  mod.rs  parse.rs  scanner.rs  spec_rules.rs  state.rs
crates/fast_h2m/src/converter/utility/: attributes.rs  caching.rs  content.rs  preprocessing.rs  serialization.rs  siblings.rs
crates/fast_h2m/src/metadata/: config.rs  extraction.rs  mod.rs  types.rs
crates/fast_h2m/src/options/: conversion.rs  mod.rs  preprocessing.rs  validation.rs
crates/fast_h2m/src/types/: document.rs  result.rs  structure_builder.rs
crates/fast_h2m/src/visitor/: default_impl.rs  mod.rs  traits.rs  types.rs
crates/fast_h2m/src/visitor_helpers/helpers/: state.rs  traversal.rs
crates/fast_h2m/src/visitor_helpers/helpers/callbacks/: mod.rs
crates/fast_h2m/src/wrapper/: sync.rs  utils.rs
crates/fast_h2m/tests/: br_in_inline_test.rs  compact_tables_test.rs  djot_output_test.rs  exclude_selectors_test.rs  fast_dom_strategy_test.rs  integration_test.rs  issue_121_regressions.rs  issue_127_regressions.rs  issue_128_regressions.rs  issue_131_regressions.rs  issue_134_regressions.rs  issue_139_regressions.rs  issue_140_regressions.rs  issue_143_regressions.rs  issue_145_regressions.rs  issue_146_regressions.rs  issue_176_regressions.rs  issue_190_regressions.rs  issue_199_regressions.rs  issue_200_regressions.rs  issue_212_regressions.rs  issue_216_217_regressions.rs  issue_336_regressions.rs  issue_339_regressions.rs  issue_347_regressions.rs  issue_348_visitor_plain.rs  issue_391_xhtml_self_closing.rs  issue_396_backticks_blank_line.rs  issue_397_strict_autolink.rs  issue_398_convert_into_option.rs  issue_399_md012_blank_lines.rs  json_ld_script_extraction.rs  lists_test.rs  mdream_strategy_test.rs  nested_list_duplication.rs  plain_output_test.rs  preprocessing_tests.rs  reference_links_test.rs  regression_379.rs  regression_380.rs  (+27 more)
crates/fast_h2m_py/: Cargo.toml  README.md  fast_h2m.pyi  pyproject.toml
crates/fast_h2m_py/src/: lib.rs
crates/fast_h2m_py/tests/: test_bindings.py
crates/h2md/: Cargo.toml  README.md
crates/h2md/benches/: convert.rs
crates/h2md/examples/: basic.rs  table.rs  test_deser.rs  test_escape.rs  test_inline_formatting.rs  test_lists.rs  test_semantic_tags.rs  test_tables.rs  test_task_lists.rs  test_whitespace.rs
crates/h2md/src/: convert_api.rs  lib.rs  text.rs  tl_types.rs
crates/h2md/tests/: br_in_inline_test.rs  compact_tables_test.rs  djot_output_test.rs  exclude_selectors_test.rs  integration_test.rs  issue_121_regressions.rs  issue_127_regressions.rs  issue_128_regressions.rs  issue_131_regressions.rs  issue_134_regressions.rs  issue_139_regressions.rs  issue_140_regressions.rs  issue_143_regressions.rs  issue_145_regressions.rs  issue_146_regressions.rs  issue_176_regressions.rs  issue_190_regressions.rs  issue_199_regressions.rs  issue_200_regressions.rs  issue_212_regressions.rs  issue_216_217_regressions.rs  issue_336_regressions.rs  issue_339_regressions.rs  issue_347_regressions.rs  issue_348_visitor_plain.rs  issue_391_xhtml_self_closing.rs  issue_396_backticks_blank_line.rs  issue_397_strict_autolink.rs  issue_398_convert_into_option.rs  issue_399_md012_blank_lines.rs  json_ld_script_extraction.rs  lists_test.rs  nested_list_duplication.rs  plain_output_test.rs  preprocessing_tests.rs  reference_links_test.rs  regression_379.rs  regression_380.rs  sectioning_elements_test.rs  skip_images_test.rs  (+25 more)
crates/html-to-markdown/: Cargo.toml
crates/html-to-markdown/examples/: test_deser.rs
crates/html-to-markdown/src/: convert_api.rs  inline_images.rs  lib.rs  rcdom.rs  text.rs  visitor_helpers.rs
crates/html-to-markdown/tests/: compact_tables_test.rs  djot_output_test.rs  exclude_selectors_test.rs  integration_test.rs  issue_121_regressions.rs  issue_127_regressions.rs  issue_131_regressions.rs  issue_134_regressions.rs  issue_140_regressions.rs  issue_143_regressions.rs  issue_145_regressions.rs  issue_190_regressions.rs  issue_212_regressions.rs  issue_339_regressions.rs  issue_397_strict_autolink.rs  issue_398_convert_into_option.rs  issue_399_md012_blank_lines.rs  plain_output_test.rs  (+31 more)
fixtures/edge-cases/: visitor_errors.json
fixtures/real-world/: articles.json
fixtures/visitor/: advanced_elements.json  basic.json  elements.json  formatting.json  forms_and_semantics.json  headings.json  images.json  links.json  media.json
(+102 files in other folders)
