[workspace]
resolver = "2"
members = [
    "crates/h2md",
]
exclude = [
    "e2e/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Na'aman Hirschfeld <naaman@kreuzberg.dev>", "Yehor Smoliakov <egorsmkv@gmail.com>"]
description = "High-performance HTML to Markdown converter"
license = "MIT"
repository = "https://github.com/RustedBytes/h2md"
homepage = "https://github.com/RustedBytes/h2md"
documentation = "https://docs.rs/h2md"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["text-processing", "web-programming"]
rust-version = "1.94"

[workspace.dependencies]
base64 = "0.22"
html5ever = "0.39.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tl = { package = "astral-tl", git = "https://github.com/RustedBytes/astral-tl", version = "0.1.0", features = ["portable-simd", "std"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)', 'cfg(feature, values("testkit"))'] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 } # Allow multiple dependency versions (common in large workspaces)
cargo_common_metadata = { level = "allow", priority = 1 } # Binding crates are internal, don't need full crates.io metadata
# Allow common patterns in alef-generated binding code
unnecessary_cast = { level = "allow", priority = 1 }
unused_unit = { level = "allow", priority = 1 }
unwrap_or_default = { level = "allow", priority = 1 }
derivable_impls = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
needless_borrows_for_generic_args = { level = "allow", priority = 1 }
useless_conversion = { level = "allow", priority = 1 }
unnecessary_fallible_conversions = { level = "allow", priority = 1 }
arc_with_non_send_sync = { level = "allow", priority = 1 } # ConversionOptionsBuilder holds Box<dyn HtmlVisitor> — not Send/Sync

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = 1

[patch.crates-io]
h2md = { path = "crates/h2md", version = "0.1.0" }
