[workspace]
resolver = "2"
members = [
    "crates/fast_h2m",
    "crates/fast_h2m_py",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
authors = ["Na'aman Hirschfeld <naaman@kreuzberg.dev>", "Yehor Smoliakov <egorsmkv@gmail.com>"]
description = "High-performance HTML to Markdown converter"
license = "MIT"
repository = "https://github.com/RustedBytes/fast_h2m"
homepage = "https://github.com/RustedBytes/fast_h2m"
documentation = "https://docs.rs/fast_h2m"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["text-processing", "web-programming"]
rust-version = "1.95"

[workspace.dependencies]
base64 = "0.22"
html5ever = "0.39.0"
mdream = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rustedbytes-tl = { version = "0.2.0", features = ["std"] }
pyo3 = "0.28.3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = 1

[patch.crates-io]
fast_h2m = { path = "crates/fast_h2m", version = "0.4.1" }
