[package]
name = "fast_h2m"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
rust-version.workspace = true
description = "High-performance HTML to Markdown converter"
keywords = ["html", "markdown", "converter", "rustedbytes-tl", "doc-processing"]
categories = ["parsing", "text-processing", "web-programming"]

[lib]
crate-type = ["rlib"]

[features]
default = ["metadata"]
full = ["inline-images", "metadata", "visitor", "serde"]
inline-images = ["dep:image"]
metadata = ["dep:serde", "dep:serde_json"]
visitor = []
serde = ["dep:serde", "dep:serde_json"]
simd = ["rustedbytes-tl/portable-simd"]
testkit = []

[dependencies]
base64.workspace = true
bitflags = "2"
html-escape = "0.2.13"
html5ever.workspace = true
image = { version = "0.25", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
    "bmp",
    "webp",
], optional = true }
lru = "0.18"
memchr = "2"
phf = { version = "0.11", features = ["macros"] }
regex.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror.workspace = true
rustedbytes-tl.workspace = true

[dev-dependencies]
criterion = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "convert"
harness = false
