[package]
name = "fast_h2m_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Python bindings for fast_h2m"
keywords = ["html", "markdown", "converter", "python", "pyo3"]
categories = ["text-processing", "web-programming"]

[lib]
name = "fast_h2m"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
fast_h2m_core = { package = "fast_h2m", path = "../fast_h2m", version = "0.1.0", features = ["serde", "metadata"] }
pyo3 = { workspace = true, features = ["abi3-py38"] }
serde_json.workspace = true
